--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,14 @@
       <artifactId>pagehelper</artifactId>
       <version>4.1.6</version>
     </dependency>
+
+<!--文件上传的依赖-->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
